# plant-leaf-diseases-identification

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: CNN_9layer_homebrew.ipynb  CNN_9layer_homebrew_128.ipynb  CNN_9layer_homebrew_32.ipynb  CNN_9layer_pytorch.ipynb  CNN_Basic_32_homebrew.ipynb  CNN_Basic_grayscale_32_homebrew.ipynb  CNN_mnist_test.ipynb  Data_Augmentation.ipynb  Dev_backpropagation.ipynb  EDA.ipynb  FFNN_homebrew.ipynb  FFNN_pytorch.ipynb  FFNN_retrain_top.ipynb  Getting Started .ipynb  Neural Net Dev.ipynb  Transfer_learning.ipynb  Transfer_learning_DenseNet.ipynb  Transfer_learning_Resnet50.ipynb  backpropagation.ipynb  dev_notebook.ipynb  mnist_test.ipynb  my_dev_notebook.ipynb  own_impl_9layer.ipynb  plant_leaf_disease_MLP.ipynb  pytorch_9layer.ipynb  reduced_cnn_on_mnist.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/3df6dda588fe4fe1abc8fbc122deaabb/: meta.yaml
notebooks/mlruns/1/: meta.yaml
notebooks/mlruns/1/08e4f12bb15047fea228b68ed2293a59/: meta.yaml
notebooks/mlruns/1/0f7ea0cd081944fda0696e2237e5f5d9/: meta.yaml
notebooks/mlruns/1/11db6de6989d4e3da81a9e2e5994bbc4/: meta.yaml
notebooks/mlruns/1/1c3aa75f4f234be5b56a0328759c8c87/: meta.yaml
notebooks/mlruns/1/1d95db84ca954d0691e80f5e5732500e/: meta.yaml
notebooks/mlruns/1/3d8dfab04f4345ccb43989a784ac5ff0/: meta.yaml
notebooks/mlruns/1/43e679a163d849609f9d744cdaa894ff/: meta.yaml
notebooks/mlruns/8/: meta.yaml
notebooks/testing/: mnist_test.ipynb
src/: activations.py  base.py  layers.py  loss.py  model.py  optimizers.py  utils.py
(+687 files in other folders)
